# sporadic-web

./: .editorconfig  .eslintignore  .eslintrc.json  .gitignore  README.md  gulpfile.js  index.html  npm-shrinkwrap.json  package-lock.json  package.json  traectplot.py  webpack.config.js
src/: index.html
src-tauri/: Cargo.toml  foo.txt  tauri.conf.json
src-tauri/src/: main.rs
src/css/: main.scss  styles.scss
src/js/: Project Name.glb  graphs.js  main.js  modernizr.min.js  monitor.js  plugins.js  webgl.js  yamap.js
